--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body{
     padding: 0%;
     margin: 0%;
-    background: url("https://i.ibb.co/gTyQy8p/gif-de-la-muete.gif");
+    background: url("");
     background-repeat: no-repeat;
     background-size: cover;
 }
