--- a/style.css
+++ b/style.css
@@ -35,3 +35,68 @@ h1{
 ::placeholder{
     color: red;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media in-width: 370px) and (max-width: 700px) {
+    .h1{
+        justify-content: center;
+    }
+
+    .warning h1 h6  {
+        justify-content: center;
+        align-items: center;
+        height: auto;
+        width: auto;
+    }
+
+.img {
+    background-size:cover;
+    width: 40vw;
+    height: 40vh;
+}
+
+#player {
+    text-align: center;
+
+}   
+}
+
+
+@media screen and (min-width: 1200px) {
+    
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+    
+}
