--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1{
 
 
 
-@media in-width: 370px) and (max-width: 700px) {
+@media (min-width: 370px) and (max-width: 700px) {
     .h1{
         justify-content: center;
     }
@@ -98,5 +98,8 @@ h1{
 
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-    
+    .img {
+        justify-content: left;
+        
+    }
 }
