--- a/style2.css
+++ b/style2.css
@@ -1,48 +1,88 @@
 body{
-    padding: 0%;
-    margin: 0%;
-    background: url("https://i.ibb.co/gTyQy8p/gif-de-la-muete.gif");
+    padding: 5vw;
+    margin: 0;
+    background: url("https://i.ibb.co/2qfMJps/list-3.gif");
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
+    height: 81vh;
 }
 
-.mundo{
-    position: absolute;
-    left: 350px;
-    top: 50px;
+#colombia{
+    width: 30vw;
+
+    fill: #02c252;
+    stroke: #023f21;
+    stroke-width: 2px;
 
 }
 
-#logo{
-    position: absolute;
-    left: 50px;
-    top: 40px;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 370px) and (max-width: 700px) {
+    body{
+        background-size:cover;
+        width: 100vw;
+        height: 100vh;
+    }
+    #colombia{
+        fill:#f0e68c ;
+        stroke: #8b4513;
+        stroke-width: 2px;    
+        background-size: cover;
+        width: 100vw;
+        height: 90vh;
+        justify-content: center;
+    }
+    #colombia :hover{        
+        fill: aqua;
+    }
+.desktop {
+    display: none;
+}
+.tablet {
+    display: none;
+}
 }
 
-.botones_movimiento{
-    position: absolute;
-    top: 450px;
-  
+/*@media (min-width: 820px) and (max-width: 990px) {
+    .desktop {
+        display: none;
+    }
+    .movil {
+        display: none;
+    }
 }
 
-.botones_movimiento button{
-    background-color: transparent;
-    margin-right: 20px;
-    border: none;
-    color: white;
-    width: 70px;
-    height: 70px;
-}
+@media (min-width: 991px) {
+    .tablet {
+        display: none;
+    }
 
-.botones_movimiento button i{
-    position: absolute;
-    
-    cursor: pointer;
-}
-
-.fire{
-    position: absolute;
-    left: 1100px;
-    top: 500px;
-    cursor: pointer;
+    .movil {
+        display: none;
+    }
 }
