--- a/style.css
+++ b/style.css
@@ -22,18 +22,19 @@ h1{
 
 }
 #player{
-    background-color: white;
+    background-color: black;
     padding: 10px 10px;
     display: block;
     border: none;
     font-family:'Rubik Glitch';
     font-size: 40px;
     text-align: center;
+    opacity: 80%;
     
     
 }
 ::placeholder{
-    color: red;
+    color: white;
 }
 
 
