--- a/style.css
+++ b/style.css
@@ -45,15 +45,6 @@ h1 {
 
 
 
-
-
-
-
-
-
-
-
-
 @media (min-width: 370px) and (max-width: 700px) {
     .h1 {
         justify-content: center;
@@ -95,6 +86,9 @@ h1 {
 
 
 
+
+
+/* CODIGO CSS - JULIÁN RODRÍGUEZ */
 
 
 #Home {
