--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
+/*--------Codigo CSS Sebastian-------*/
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
+
 body{
     margin: 0;
     padding: 0;
@@ -30,6 +32,7 @@ h1{
     font-size: 40px;
     text-align: center;
     opacity: 80%;
+    color: white;
     
     
 }
