--- a/style2.css
+++ b/style2.css
@@ -43,6 +43,15 @@ body{
 
 
 @media (min-width: 370px) and (max-width: 700px) {
+    body {
+        font-size: 16px;
+      }
+      .container {
+        width: 90%;
+        margin: 0 auto;
+      }
+
+
     body{
         background-size:cover;
         width: 100vw;
@@ -68,7 +77,7 @@ body{
 }
 }
 
-/*@media (min-width: 820px) and (max-width: 990px) {
+@media (min-width: 820px) and (max-width: 990px) {
     .desktop {
         display: none;
     }
