--- a/style2.css
+++ b/style2.css
@@ -1,7 +1,7 @@
 body{
     padding: 5vw;
     margin: 0;
-    background: url("https://i.ibb.co/2qfMJps/list-3.gif");
+    background: url("https://i.ibb.co/GWH2dw8/list-1.gif");
     background-repeat: no-repeat;
     background-size: cover;
     text-align: center;
