--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ 
 }
 img{
     height: 350px;
