--- a/style2.css
+++ b/style2.css
@@ -6,6 +6,8 @@ body{
     background-size: cover;
     text-align: center;
     height: 81vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+ 
 }
 
 #colombia{
