--- a/style.css
+++ b/style.css
@@ -35,6 +35,14 @@ h1{
     color: red;
 }
 
+.inicio{
+    position: relative;
+    padding: 10px 30px;
+    border: 3px solid;
+    text-decoration: none;
+    color: black;
+    background: white;
+}
 
 
 
