--- a/style.css
+++ b/style.css
@@ -66,6 +66,20 @@ h1{
     background-color: brown;
 }
 
+.inicio span:nth-child(2){
+    left: 10%;
+    bottom: -10px;
+    background-color: white;
+}
+
+.inicio:hover span:nth-child(1){
+    right: 80%;
+    transform: rotate(90deg);
+    color: var(--color);
+    background-color: white;
+}
+
+
 
 
 
