--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ h1{
 
 .inicio span:nth-child(1){
     right: 10%;
-    top: -10%;
+    top: -13%;
     background-color: brown;
 }
 
@@ -79,8 +79,11 @@ h1{
     background-color: white;
 }
 
-
-
+.inicio:hover span:nth-child(2){
+    left: 80%;
+    transform: rotate(90deg);
+    background-color: brown;
+}
 
 
 
