--- a/Popup_dead_coder.css
+++ b/Popup_dead_coder.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
 
 
 * {
@@ -17,6 +18,8 @@ body {
   font-family: "Orbitron";
 
 }
+
+
 
 .modal-container {
   display: flex;
@@ -38,15 +41,16 @@ body {
 .show {
   pointer-events: auto;
   opacity: 1;
+  
 }
 
 .modal {
-  background: #2A0609;
+  background: linear-gradient(60deg, rgba(42, 6, 9, 0.7), black);
   border: 3px solid;
   width: 70%;
-  height: 25%;
+  height: 65%;
   border-radius: 5px;
-  box-shadow: 0 2px 4px #f10303e5;
+  box-shadow: 20px 10px 20px #f10303e5;
   text-align: center;
   margin-top: -20px;
   display: flex;
@@ -56,39 +60,74 @@ body {
   padding-bottom: 2vh;
   margin-bottom: 15vh;
 }
+.modal:hover{
+  background-color:linear-gradient(60deg, rgba(42, 6, 9, 0.7), black);
+  color:white;
+  box-shadow: 20px 10px 20px #83247B;
+  transition: all 0.6s ease;
+}
 
 .modal h3 {
+  position: relative;
+  top: 1.95vw;
   max-width: 80%;
   color: white;
+
 }
 
 
 #imagen {
   width: 100%;
-  height: 100%;
+  height: 150%;
+  
 
 }
 
 .container_imagen {
-  height: 20vh;
+ height: 20vh;
   width: 35vh;
   z-index: 2;
-
-
 }
 
 .btcontinue {
-  border: solid 3px white;
-  padding: 0.7vh 0.2vh 0.3vh 0.7vh;
-  margin: 0vh 1.5vh;
+  position: relative;
+  border: solid 3px ;
+  padding: 7px 15px;
+  /*margin: 0vh 1.5vh;*/
   width: 80%;
+  cursor: pointer;
 }
+
 
 .container_bottons{
   display: flex;
   justify-content: space-evenly;
   
 }
+
+button{
+  position: absolute;
+  left: 900px;
+  top: 500px;
+  padding: 10px 30px;
+  border: 3px solid;
+  text-decoration: none;
+  background-color: black;
+  color: white;
+  transition: all 0.6s ease;
+  font-family: 'Rubik Glitch';
+  font-size: 30px;
+  cursor: pointer;
+}
+
+button:hover{
+  background-color: brown;
+  box-shadow: 0 0 30px white;
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+
+
 
 /* Media movile-tablet */
 @media (max-width: 1024px) {
