--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
 body{
-    background-image: url("https://i.ibb.co/P6yJwWX/start.gif");
+    background-image: url("https://i.ibb.co/ckLfhBR/hotel-salto-tequendama.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -19,15 +19,17 @@ body{
     padding: 10px 30px;
     border:3px solid;
     text-decoration: none;
-    color: brown;
+    color: black;
+    background: white;
     transition: all 0.6s ease;
     
 }
 
 .button:hover{
-    background-color: black;
+    background-color: brown;
     box-shadow:0 0 30px red;
-    border-color: var(--color);
+    border-color: black;
+    
 
 }
 
