--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body{
     padding: 2vw;
  
 }
+
 #logo{
  width: 20vw;
  height: auto;
@@ -70,4 +71,137 @@ a{
     text-decoration: none;
 }
 
+
+
+
      
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Estilos base para todos los tamaños de pantalla */
+
+  /* Estilos para dispositivos móviles y tablets */
+  @media (min-width: 370px) and (max-width: 760px) {
+
+    body{
+        
+        background-position: top;
+        background-size: 222%;
+    }
+    
+
+    #logo {
+      width: 40vw;
+      height: 40vh;
+    }
+
+    #start {
+      font-size: 19px;
+      padding: 10px 17px;
+    }
+  }
+
+  /*Estilos para tab*/
+  @media (min-width: 768px) and (max-width: 1023px) {
+
+    
+    body{
+        background-position:top;
+        background-size: 120%;
+     
+    }
+
+
+    #logo {  
+      width: 39vw;
+      height: 55vh;
+    }
+
+
+    #start {
+      font-size: 16px;
+      padding: 12px 24px;
+    }
+    
+  }
+
+  
+  /* Estilos generales para el botón */
+  .button {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+
+
+  /* Estilos para escritorios */
+  @media (min-width: 770px) {
+
+    body{
+        background-position:top;
+        background-size: 120%;
+
+    }
+
+    
+
+    #start {
+      font-size: 18px;
+      padding: 15px 30px;
+    }
+
+   #logo {
+        width: 40vw;
+        height: 58vh;
+      
+    }
+
+
+  }
+
+  /* Estilos generales para el botón */
+  .button {
+    display: inline-block;
+    background-color: #007bff;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    cursor: pointer;
+    position: relative;
+    overflow: hidden;
+  }
+
+  /* Estilos para las líneas animadas del botón */
+  .button span {
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    left: 0;
+    transform: translateY(0);
+    transition: transform 0.2s;
+  }
+
+  /* Animación para el botón al hacer hover */
+  .button:hover span:first-child {
+    transform: translateY(-5px);
+  }
+
+  .button:hover span:last-child {
+    transform: translateY(5px);
+  }
