--- a/style.css
+++ b/style.css
@@ -84,10 +84,6 @@ h1 {
 
 
 
-
-
-
-
 /* CODIGO CSS - JULIÁN RODRÍGUEZ */
 
 #Home {
@@ -151,6 +147,8 @@ label {
     background-color: #666;
     border-radius: 10px;
 }
+
+/*Se aplica estilo a los botones*/
 
 button {
     padding: 12px 30px;
