--- a/index.css
+++ b/index.css
@@ -1,11 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik+Glitch&display=swap');
 body{
-    background-image: url("https://i.ibb.co/P6yJwWX/start.gif");
+    background-image: url("https://i.ibb.co/ckLfhBR/hotel-salto-tequendama.png");
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: cover;
     text-align: center;
-    height: 81vh;
     padding: 2vw;
  
 }
@@ -19,7 +18,8 @@ body{
     padding: 10px 30px;
     border:3px solid;
     text-decoration: none;
-    color: brown;
+    color: black;
+    background-color: white;
     transition: all 0.6s ease;
     
 }
@@ -28,6 +28,7 @@ body{
     background-color: black;
     box-shadow:0 0 30px red;
     border-color: var(--color);
+    color: brown;
 
 }
 
