--- a/style.css
+++ b/style.css
@@ -25,21 +25,65 @@ h1{
     background-color: white;
     padding: 10px 10px;
     display: block;
-    border: none;
+    border: 10px solid black;
     font-family:'Rubik Glitch';
     font-size: 40px;
     text-align: center;
-    
-    
 }
+
 ::placeholder{
     color: red;
 }
 
+.inicio{
+    position: relative;
+    padding: 10px 30px;
+    border: 3px solid;
+    text-decoration: none;
+    color: black;
+    background: white;
+    transition: all 0.6s ease;
+}
 
+.inicio:hover{
+    background-color: brown;
+    box-shadow: 0 0 30px red;
+    border-color: black;
+}
 
+.inicio span:nth-child(n){
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border: 3px solid;
+    transition: all 0.6s ease;
 
+}
 
+.inicio span:nth-child(1){
+    right: 10%;
+    top: -1%;
+    background-color: brown;
+}
+
+.inicio span:nth-child(2){
+    left: 10%;
+    bottom: -10px;
+    background-color: white;
+}
+
+.inicio:hover span:nth-child(1){
+    right: 80%;
+    transform: rotate(90deg);
+    color: var(--color);
+    background-color: white;
+}
+
+.inicio:hover span:nth-child(2){
+    left: 80%;
+    transform: rotate(90deg);
+    background-color: brown;
+}
 
 
 
