--- a/style2.css
+++ b/style2.css
@@ -44,19 +44,15 @@ body{
 
 @media (min-width: 370px) and (max-width: 700px) {
 
-      .container {
-        width: 90%;
-        margin: 0 auto;
-      }
-
-
+    
     body{
         background-size:cover;
-        width: 100vw;
-        height: 100vh;
+        width: 190px;
+        height: 190px;
     }
     
     #colombia{
+        
         stroke-width: 2px;    
         background-size: cover;
         width: 100vw;
