--- a/style.css
+++ b/style.css
@@ -30,11 +30,9 @@ h1{
     font-size: 40px;
     text-align: center;
 }
-
 ::placeholder{
     color: red;
 }
-
 .inicio{
     position: relative;
     padding: 10px 30px;
@@ -43,6 +41,7 @@ h1{
     color: black;
     background: white;
     transition: all 0.6s ease;
+    margin-left: 3rem;
 }
 
 .inicio:hover{
@@ -84,12 +83,95 @@ h1{
     transform: rotate(90deg);
     background-color: brown;
 }
+#Home {
+    width: 80%;
+    max-width: 600px;
+    margin: auto;
+    text-align: center;
+    justify-items: space-between;
+    padding: 40px;
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+}
+#agregar{
+    position: relative;
+    padding: 10px 30px;
+    border: 3px solid;
+    text-decoration: none;
+    color: black;
+    background: white;
+    transition: all 0.6s ease;
+}
+#agregar:hover{
+    background-color: brown;
+    box-shadow: 0 0 30px red;
+    border-color: black;
+}
+#agregar span:nth-child(n){
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    border: 3px solid;
+    transition: all 0.6s ease;
+
+}
+#agregar span:nth-child(1){
+    right: 10%;
+    top: -1%;
+    background-color: brown;
+}
+#agregar span:nth-child(2){
+    left: 10%;
+    bottom: -10px;
+    background-color: white;
+}
+#agregar:hover span:nth-child(1){
+    right: 80%;
+    transform: rotate(90deg);
+    color: var(--color);
+    background-color: white;
+}
+#agregar:hover span:nth-child(2){
+    left: 80%;
+    transform: rotate(90deg);
+    background-color: brown;
+}
+#chosen-players {
+        color: #fff;
+}
+
+/*Se aplica estilo a titulos h3*/
+h3 {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+/*Se aplica estilo CSS a lista ordenada y desordenada*/
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+.player-list-item {
+    font-size: 18px;
+    margin-bottom: 10px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s; /* Transición suave para el desplazamiento */
+}
 
 
+/* Estilos para el desplazamiento hacia abajo después de cada cuarto jugador */
+.player-list-item-shifted {
+    transform: translateY(20px); /* Puedes ajustar el valor para el desplazamiento */
+}
 
-
-
-
+/* Estilos para la barra de desplazamiento */
+#chosen-player {
+    max-height: none;
+    overflow-y: visible;
+}
 
 
 
