--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ img{
 h1{
     color: white;
     font-size: 35px;
-
 }
 #player{
     background-color: white;
@@ -41,7 +40,6 @@ h1{
     color: black;
     background: white;
     transition: all 0.6s ease;
-    margin-left: 3rem;
 }
 
 .inicio:hover{
@@ -172,7 +170,17 @@ ul {
     max-height: none;
     overflow-y: visible;
 }
-
+#warning{
+    color: rgb(229, 245, 4);
+    text-align: center;
+}
+h6 {
+    color: black;
+    font-size: 24px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
 
 
 
