--- a/index.css
+++ b/index.css
@@ -18,14 +18,13 @@ body{
 }
 
 .button{
-    position: relative;
-    padding: 10px 30px;
-    border:3px solid;
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    transition: all 0.6s ease;
-    
+  position: relative;
+  padding: 10px 30px;
+  border: 3px solid;
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  transition: all 0.6s ease;
 }
 
 .button:hover{
@@ -66,6 +65,7 @@ body{
     transform: rotate(90deg);
     background-color: brown;
 }
+
 a{
     color:wheat;;
     font-size: 4em;
@@ -86,7 +86,7 @@ a{
 /* Estilos base para todos los tamaños de pantalla */
 
   /* Estilos para dispositivos móviles y tablets */
-  @media screen and (max-width: 600px) {
+  @media  (min-width: 320px) and (max-width: 600px) {
 
     body{
         background-position: top;
@@ -104,6 +104,8 @@ a{
       font-size: 19px;
       padding: 17px 17px;
     }
+
+
   }
 
 
@@ -156,15 +158,14 @@ a{
     }
 
     
-
     #start {
-      font-size: 18px;
+      font-size: 38px;
       padding: 15px 30px;
     }
 
    #logo {
-        width: 40vw;
-        height: 58vh;
+        width: 31vw;
+        height: 55vh;
       
     }
 
