--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,4 @@
-body{
+body {
     padding: 5vw;
     margin: 0;
     background: url("https://i.ibb.co/GWH2dw8/list-1.gif");
@@ -8,7 +8,7 @@ body{
     height: 81vh;
 }
 
-#colombia{
+#colombia {
     width: 30vw;
 
     fill: #02c252;
@@ -16,56 +16,52 @@ body{
     stroke-width: 2px;
 
 }
+
 /* css de la explosion al dar click*/
 
 #explosion-container {
     display: none;
     position: absolute;
-  }
-@media (min-width: 991px) {
-    .tablet {
-        display: none;
-    }
-
-    .movil {
-        display: none;
-    }
 }
-@media (min-width: 370px) and (max-width: 700px) {
 
-    
-    body{
-        background-size:cover;
+
+/*Movil responsive*/
+@media (min-width: 320px) and (max-width: 700px) {
+
+
+    body {
+        background-size: cover;
         width: 190px;
         height: 190px;
     }
-    
-    #colombia{
-        
-        stroke-width: 2px;    
+
+    #colombia {
+
+        stroke-width: 2px;
         background-size: cover;
         width: 100vw;
         height: 90vh;
         justify-content: center;
     }
 
-    #colombia :hover{        
+    #colombia :hover {
         fill: aqua;
     }
 
-.desktop {
-    display: none;
-}
+    .desktop {
+        display: none;
+    }
 
-.tablet {
-    display: none;
-}
+    .tablet {
+        display: none;
+    }
 }
 
 @media (min-width: 820px) and (max-width: 990px) {
     .desktop {
         display: none;
     }
+
     .movil {
         display: none;
     }
